--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
-                        <img src="src/img/test-1.jpg" alt="Test" />
+                        <img src="src/img/test-1.jpg" alt="Testing" />
                       </figure>
                       <div class="preview__data">
                         <h4 class="preview__name">
